added index and item details page

--- a/ecoswap_app/templates/ecoswap_app/base.html
+++ b/ecoswap_app/templates/ecoswap_app/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'base.css' %}" />
+    <link rel="stylesheet" href="{% static 'ecoswap_app/css/base.css' %}" />
     {% block additionalStyles %}{% endblock %}
   </head>
   <body>
