--- a/ecoswap_app/templates/ecoswap_app/base.html
+++ b/ecoswap_app/templates/ecoswap_app/base.html
@@ -15,6 +15,7 @@
         {% if user.is_authenticated %}
         <p>Welcome, {{ user.username }}!</p>
         <a href="{% url 'ecoswap_app:profile' %}">Profile</a>
+        <a href="{% url 'ecoswap_app:user_items' %}">My Items</a>
         <a href="{% url 'ecoswap_app:logout' %}">Logout</a>
         {% else %}
         <a href="{% url 'ecoswap_app:login' %}">Login</a>
