added item deletion functionality
(cherry picked from commit f47ebe6c30cf25ab87ddc7e2ec6ad95691cb060e)

--- a/ecoswap_app/templates/ecoswap_app/item_details.html
+++ b/ecoswap_app/templates/ecoswap_app/item_details.html
@@ -12,6 +12,7 @@ Details{% endblock %} {% block additionalStyles %}
 
   {% if user == item.user %}
   <a href="{% url 'ecoswap_app:update_item' item.id %}">Edit Item</a>
+      <a href="{% url 'ecoswap_app:delete_item' item.id %}">Delete Item</a>
   {% endif %}
 </div>
 {% endblock %}
