added functionality for exchange offer
(cherry picked from commit 6f09c38643a7b824e46b21780433cd816f9be5c0)

--- a/ecoswap_app/templates/ecoswap_app/item_details.html
+++ b/ecoswap_app/templates/ecoswap_app/item_details.html
@@ -12,7 +12,11 @@ Details{% endblock %} {% block additionalStyles %}
 
   {% if user == item.user %}
   <a href="{% url 'ecoswap_app:update_item' item.id %}">Edit Item</a>
-      <a href="{% url 'ecoswap_app:delete_item' item.id %}">Delete Item</a>
+  <a href="{% url 'ecoswap_app:delete_item' item.id %}">Delete Item</a>
+  {% else %}
+  <a href="{% url 'ecoswap_app:request_exchange' item.id %}"
+    >Request Exchange
+  </a>
   {% endif %}
 </div>
 {% endblock %}
