Exchange request handling
(cherry picked from commit 02afc97992665c3e9dbc67f48193af5ab38fcc1a)

--- a/ecoswap_app/templates/ecoswap_app/base.html
+++ b/ecoswap_app/templates/ecoswap_app/base.html
@@ -17,14 +17,16 @@
         <a href="{% url 'ecoswap_app:profile' %}">Profile</a>
         <a href="{% url 'ecoswap_app:user_items' %}">My Items</a>
          <a href="{% url 'ecoswap_app:send_message' exchange_id=1 %}">Chat</a>   
-            <a href="{% url 'ecoswap_app:message_list' %}">Messages</a>   
-         <a href="{% url 'ecoswap_app:logout' %}">Logout</a>
-
-       
+        <a href="{% url 'ecoswap_app:message_list' %}">Messages</a>
             
+        <a href="{% url 'ecoswap_app:create_item' %}">Create Item</a>
+        <a href="{% url 'ecoswap_app:user_exchange_requests' %}">
+          Exchange Requests {{ exchange_request_count }}
+        </a>
+        <a href="{% url 'ecoswap_app:logout' %}">Logout</a>
         {% else %}
         <a href="{% url 'ecoswap_app:login' %}">Login</a>
-        <a href="{% url 'ecoswap_app:register' %}">Register</a><a href="{% url 'ecoswap_app:register' %}">Register</a>
+        <a href="{% url 'ecoswap_app:register' %}">Register</a>
         {% endif %}
       </div>
     </div>
