--- a/ecoswap_app/static/ecoswap_app/css/item_details.css
+++ b/ecoswap_app/static/ecoswap_app/css/item_details.css
@@ -32,12 +32,12 @@ body {
   display: inline-block;
   margin-top: 20px;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #4caf50;
   color: #fff;
   text-decoration: none;
   border-radius: 5px;
 }
 
 .item-detail-container a:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
 }
