--- a/ecoswap_app/templates/ecoswap_app/login.html
+++ b/ecoswap_app/templates/ecoswap_app/login.html
@@ -1,10 +1,14 @@
 <!-- ecoswap_app/templates/ecoswap_app/login.html -->
 
-{% extends "ecoswap_app/base.html" %} {% block title %}Login{% endblock %}
-{%block content %}
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
+{% extends "ecoswap_app/base.html" %} {% load static %} {% block title %}Login
+{%endblock %} {% block additionalStyles %}
+<link rel="stylesheet" href="{% static 'ecoswap_app/css/login.css' %}" />
+{% endblock %} {%block content %}
+<div class="container">
+  <h2>Login</h2>
+  <form method="post">
+    {% csrf_token %} {{ form.as_p }}
+    <button type="submit">Login</button>
+  </form>
+</div>
 {% endblock %}
