--- a/ecoswap_app/templates/ecoswap_app/profile.html
+++ b/ecoswap_app/templates/ecoswap_app/profile.html
@@ -1,11 +1,15 @@
 <!-- ecoswap_app/templates/ecoswap_app/profile.html -->
 
-{% extends "ecoswap_app/base.html" %} {% block title %}Profile{% endblock %}
-{%block content %}
-<h2>Profile</h2>
-<p>Username: {{ user.username }}</p>
-<p>Email: {{ user.email }}</p>
-<p>Phone Number: {{ user.phone_number }}</p>
-<p>Address: {{ user.address }}</p>
-<p>Joined on: {{ user.created_at }}</p>
+{% extends "ecoswap_app/base.html" %} {% load static %} {% block title %}
+Profile {% endblock %} {% block additionalStyles %}
+<link rel="stylesheet" href="{% static 'ecoswap_app/css/profile.css' %}" />
+{% endblock %} {%block content %}
+<div class="container">
+  <h2>Profile</h2>
+  <p>Username: {{ user.username }}</p>
+  <p>Email: {{ user.email }}</p>
+  <p>Phone Number: {{ user.phone_number }}</p>
+  <p>Address: {{ user.address }}</p>
+  <p>Joined on: {{ user.created_at }}</p>
+</div>
 {% endblock %}
