--- a/ecoswap_app/static/ecoswap_app/css/messages.css
+++ b/ecoswap_app/static/ecoswap_app/css/messages.css
@@ -6,7 +6,7 @@ body {
     background-color: #f4f4f9;
     margin: 0;
     padding: 0;
-    display: flex;
+ 
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -20,6 +20,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
 }
 
 /* Heading */
