--- a/ecoswap_app/templates/ecoswap_app/base.html
+++ b/ecoswap_app/templates/ecoswap_app/base.html
@@ -30,12 +30,7 @@
         {% endif %}
       </div>
     </div>
-    {% if messages %}
-    <div class="messages">
-      {% for message in messages %}
-      <div class="message {{ message.tags }}">{{ message }}</div>
-      {% endfor %}
-    </div>
-    {% endif %} {% block content %}{% endblock %}
+ 
+     {% block content %}{% endblock %}
   </body>
 </html>
