--- a/ecoswap_app/templates/ecoswap_app/user_exchange_requests.html
+++ b/ecoswap_app/templates/ecoswap_app/user_exchange_requests.html
@@ -29,6 +29,9 @@ Exchange Requests{% endblock %} {% block additionalStyles %}
         {% csrf_token %}
         <button type="submit">Reject</button>
       </form>
+      <a href="{% url 'ecoswap_app:send_message' exchange_id=request.id %}"
+        >Chat</a
+      >
     </li>
     {% empty %}
     <li>No exchange requests.</li>
